small fix in - home view for description overflow

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -106,7 +106,11 @@
     font-size: 1.3em;
     font-style: italic;
     visibility: visible;
-    display: block;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
     height: 50%;
     color: black;
 }
